bugfix: app 3-up wrapping

--- a/src/assets/scss/pages/_work-item.scss
+++ b/src/assets/scss/pages/_work-item.scss
@@ -31,6 +31,7 @@ $work-item-site-width-actual: 700px;
 .outcome-screenshot img {
   @include brand-shadow;
   margin-bottom: 13px;
+  width: 100%;
   max-width: 700px;
 }
 .outcome-link {
